--- a/Resources/administration/src/app/component/base/sw-tabs-item/sw-tabs-item.scss
+++ b/Resources/administration/src/app/component/base/sw-tabs-item/sw-tabs-item.scss
@@ -13,6 +13,10 @@ $sw-side-navigation-item-color-disabled: $color-kashmir;
     white-space: nowrap;
     color: lighten($sw-side-navigation-item-link-color, 30);
     cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 
     &.sw-tabs-item--active {
         color: $sw-side-navigation-item-link-color;
