NEXT-2138 - Add tags to order

--- a/Resources/administration/src/app/component/form/sw-tag-field/sw-tag-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-tag-field/sw-tag-field.html.twig
@@ -5,7 +5,7 @@
                 <sw-select :id="entity.id"
                            multi
                            ref="swTagSelect"
-                           :label="$tc('global.sw-tag-field.title')"
+                           :label="label ? $tc('global.sw-tag-field.title') : ''"
                            :placeholder="$tc('global.sw-tag-field.placeholder')"
                            :associationStore="associationStore"
                            :store="tagStore"
