--- a/Resources/administration/src/app/component/structure/sw-search-bar-item/sw-search-bar-item.scss
+++ b/Resources/administration/src/app/component/structure/sw-search-bar-item/sw-search-bar-item.scss
@@ -10,7 +10,7 @@ $sw-search-bar-item-label-hover-color-text: $color-shopware-blue;
     border-radius: $sw-search-bar-item-border-radius;
 
     .sw-search-bar-item__link {
-        padding: 8px 15px;
+        padding: 4px 10px;
         border-radius: $sw-search-bar-item-border-radius;
         display: flex;
         text-decoration: none;
@@ -37,13 +37,13 @@ $sw-search-bar-item-label-hover-color-text: $color-shopware-blue;
         margin-left: auto;
     }
 
-    &:hover {
-        .sw-search-bar-item__link {
-            background: $sw-search-bar-item-hover-color-background;
-        }
+	&.is--active {
+		.sw-search-bar-item__link {
+			background: $sw-search-bar-item-hover-color-background;
+		}
 
-        .sw-search-bar-item__label {
-            color: $sw-search-bar-item-label-hover-color-text;
-        }
-    }
+		.sw-search-bar-item__label {
+			color: $sw-search-bar-item-label-hover-color-text;
+		}
+	}
 }
