--- a/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
+++ b/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
@@ -3,9 +3,10 @@
 
         {% block sw_order_list_search_bar %}
             <template slot="search-bar">
-                <sw-search-bar :placeholder="$tc('sw-category.general.placeholderSearchBar')"
-                               :searchType="$tc('sw-category.general.mainMenuItemIndex')"
-                               :entityService="categoryStore"
+                <sw-search-bar initialSearchType="category"
+                               :initialSearch="term"
+                               typeSearchAlwaysInContainer
+                               ref="searchBar"
                                @search="this.onSearch">
                 </sw-search-bar>
             </template>
