--- a/Resources/administration/src/module/sw-customer/page/sw-customer-list/sw-customer-list.html.twig
+++ b/Resources/administration/src/module/sw-customer/page/sw-customer-list/sw-customer-list.html.twig
@@ -3,8 +3,8 @@
 
         {% block sw_customer_list_search_bar %}
             <template slot="search-bar">
-                <sw-search-bar :placeholder="$tc('sw-customer.general.placeholderSearchBar')"
-                               :searchType="$tc('sw-customer.general.mainMenuItemGeneral')"
+                <sw-search-bar initialSearchType="customer"
+                               :initialSearch="term"
                                @search="this.onSearch">
                 </sw-search-bar>
             </template>
