--- a/Resources/administration/src/module/sw-order/page/sw-order-list/sw-order-list.html.twig
+++ b/Resources/administration/src/module/sw-order/page/sw-order-list/sw-order-list.html.twig
@@ -2,8 +2,8 @@
     <sw-page class="sw-order-list">
         {% block sw_order_list_search_bar %}
             <template slot="search-bar">
-                <sw-search-bar :placeholder="$tc('sw-order.general.placeholderSearchBar')"
-                               :searchType="$tc('sw-order.general.mainMenuItemGeneral')"
+                <sw-search-bar initialSearchType="order"
+                               :initialSearch="term"
                                @search="this.onSearch">
                 </sw-search-bar>
             </template>
