NTR Adjusted illustration path

--- a/Resources/administration/src/app/component/structure/sw-error/sw-error.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-error/sw-error.html.twig
@@ -3,7 +3,7 @@
         <div class="sw-error__container">
             {% block sw_error_illustration %}
                 <div class="sw-error__illustration">
-                    <img :src="'/administration/static/img/error.svg' | asset" alt="">
+                    <img :src="imagePath" alt="">
                 </div>
             {% endblock %}
 
