NEXT-2258 - Prevent global search in CMS overview page

--- a/Resources/administration/src/module/sw-cms/page/sw-cms-list/sw-cms-list.html.twig
+++ b/Resources/administration/src/module/sw-cms/page/sw-cms-list/sw-cms-list.html.twig
@@ -26,6 +26,7 @@
                     <sw-search-bar :placeholder="$tc('sw-cms.general.placeholderSearchBar')"
                                    :searchType="$tc('sw-cms.general.mainMenuItemGeneral')"
                                    :showTag="false"
+                                   :allowGlobalSearch="false"
                                    @search="onSearch">
                     </sw-search-bar>
 
