--- a/Resources/administration/src/module/sw-customer/view/sw-customer-detail-order/sw-customer-detail-order.html.twig
+++ b/Resources/administration/src/module/sw-customer/view/sw-customer-detail-order/sw-customer-detail-order.html.twig
@@ -35,12 +35,12 @@
                                 <sw-grid-column flex="minmax(200px, 1fr)"
                                                 truncate
                                                 :label="$tc('sw-customer.detailOrder.columnNumber')"
-                                                dataIndex="id"
+                                                dataIndex="orderNumber"
                                                 sortable
                                                 align="center">
 
                                     <router-link :to="{ name: 'sw.order.detail', params: { id: item.id } }">
-                                        {{ item.id }}
+                                        {{ item.orderNumber }}
                                     </router-link>
                                 </sw-grid-column>
                             {% endblock %}
